Fixed mobile overflow

--- a/src/client/App.css
+++ b/src/client/App.css
@@ -91,10 +91,9 @@ button:hover {
 }
 
 /* Hero and Description*/
-.hero, .description, .stream, .hacker-stories, .sponsor, .how-it-works, .contact {
+.hero, .description, .stream, .hacker-stories, .how-it-works, .contact {
   height: 100vh;
   position: relative;
-  overflow: hidden;
   text-align: left;
 }
 
@@ -120,11 +119,13 @@ button:hover {
   max-height: 100vh;
 }
 
-@media (max-width: 768px) {
-  .hero, .description, .stream, .hacker-stories, .sponsor, .how-it-works, .contact {
-    max-height: 200vh;
+@media (max-width: 769px) {
+  .hero, .description, .stream, .hacker-stories, .sponsor, .contact {
+    min-height: 100%;
+    max-height: 350vh;
+    height: auto;
     display: block;
-    overflow: auto;
+    overflow: hidden;
   }
   .hero-text, .description-text {
     margin-top: 5%;
@@ -167,7 +168,7 @@ button:hover {
 
 @media (max-width: 768px) {
   .how-it-works {
-    height: 80vh;
+    height: 100vh;
   }
   .how-it-works img {
     margin-top: 5%;
@@ -284,14 +285,6 @@ button:hover {
   opacity: 0.5 !important;
 }
 
-.carousel-left {
-
-}
-
-.carousel-right {
-  z-index: 1;
-}
-
 .carousel-bar {
   margin-top: 2%;
   padding: 1%;
@@ -323,6 +316,10 @@ button:hover {
 }
 
 /* FAQ */
+.faq {
+  overflow: hidden;
+}
+
 .accordion {
   margin-top: 2%;
   cursor: pointer;
@@ -364,13 +361,20 @@ button:hover {
 
 /* Sponsor */
 .sponsor {
+  position: relative;
+  display: block;
+  padding: 30px;
   text-align: center;
-  height: 30vh;
+}
+
+.sponsor-text {
+  display: block;
+  margin: 10px auto;
 }
 
 /* Contact */
 .contact{
-  height: 90vh;
+  max-height: 90vh;
   background-color: #F6F6F6;
 }
 
@@ -383,8 +387,6 @@ button:hover {
   padding: 10%;
   border-radius: 7px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  display: block;
-  margin : 0 auto;
   background-color: white;
 }
 
